modificato il layout dell'hero

--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,11 @@ main{
     max-width: 250px;
 }
 .hero_jumbo{
-    position: absolute;
-    z-index: -1;
+    
     height: 100%;
 }
-.hero_jumbo img{
-    object-fit: cover;
-    object-position: center;
-}
 .hero_text{
-        padding-top: 350px;
+        position: absolute;
+        top: 350px;
+
 }
