--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,30 @@ main{
 .hero_logo{
     max-width: 250px;
 }
-.hero_jumbo{  
-    height: 100%;
-}
+/* .hero_jumbo{  
+    height: 70vh;
+} */
 .hero_jumbo img{
- /* fixare l'immagine */
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
 }
 .hero_text{
     position: absolute;
-    top: 350px;
+     top: 250px;/*
+    bottom: 0;
+    right: 0;
+    left: 0; */
 }
 .hero_carousel img{
  border-radius: 20px;
+}
+/* PLAY_5 */
+.play_5_carousel img{
+    width: 70%;
+    opacity: 0.7;
+}
+
+.play_5_carousel h5{
+    opacity: 0.7;
 }
