--- a/css/style.css
+++ b/css/style.css
@@ -4,65 +4,83 @@
 .header_top {
     height: 40px;
 }
-.header_top .logo_header{
+
+.header_top .logo_header {
     height: 60%;
 }
+
 /* HEADER_BOTTOM */
 .header_right img {
     height: 30px;
 }
 
 /* BUTTONS */
-.btn{
-border-radius: 20px;
-text-transform: capitalize;
+.btn {
+    border-radius: 20px;
+    text-transform: capitalize;
 }
-.btn_black{
+
+.btn_black {
     background-color: #363636;
     color: white;
 }
-.btn_orange{
+
+.btn_orange {
     background-color: #cd3d0f;
     color: white;
 }
-.btn_blue{
+
+.btn_blue {
     background-color: #2d64e6;
     color: white;
 }
 
 /* MAIN */
-main{
+main {
     margin-top: 116px;
 }
+
 /* HERO */
-.hero{   
+.hero {
     position: relative;
 }
-.hero_logo{
+
+.hero_logo {
     max-width: 250px;
 }
+
 /* .hero_jumbo{  
     height: 70vh;
 } */
-.hero_jumbo img{
+.hero_jumbo img {
     width: 100%;
     height: 60vh;
     object-fit: cover;
 }
-.hero_text{
+
+.hero_text {
     position: absolute;
-     top: 150px;
+    top: 150px;
 
 }
-.hero_carousel img{
- border-radius: 20px;
+
+.hero_carousel img {
+    border-radius: 20px;
 }
-/* PLAY_5 */
-.play_5_carousel img{
+
+/* PLAY_N */
+.play_5_carousel img {
     width: 70%;
     opacity: 0.7;
 }
 
-.play_5_carousel h5{
+.play_5_carousel h5 {
     opacity: 0.7;
 }
+
+/* it take two  */
+.it_takes_two {
+    background-color: #1f1f1f;
+}
+
+/* ps4 */
