--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@
     background-color: #2d64e6;
     color: white;
 }
+.btn_grey {
+    background-color: #d9dadc;
+    color: #3066e6;
+}
 
 /* MAIN */
 main {
@@ -83,4 +87,13 @@ main {
     background-color: #1f1f1f;
 }
 
-/* ps4 */
+/* PS PLUS */
+.ps_plus{
+    background-color: #bebcbb;
+}
+.ps-plus-logo{
+    width: 60%;
+}
+.ps-plus-games{
+    width: 80%;
+}
