--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,26 @@ main {
 }
 
 /* HERO */
-.hero_jumbo {
+.hero_jumbo_returnal {
     background-image: url("../img/jumbo-bg.png");
-
+    /* background-position: center; */
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    padding-top: 200px;
+    padding-bottom: 50px;
+}
+.hero_jumbo_it2 {
+    background-image: url("../img/it-takes-two-hero-banner-desktop.jpg");
+    /* background-position: center; */
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    padding-top: 200px;
+    padding-bottom: 50px;
+}
+.hero_text img{
+    width: 250px;
 }
 
 
