--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,20 @@ main {
 }
 
 /* PLAY_5 */
+.play_5_card {
+    opacity: 0.7;
+    border-bottom: 2px solid transparent;
+}
 .play_5_carousel img {
     width: 70%;
-    opacity: 0.7;
+}
+.play_5_card:hover {
+    opacity: 1;
+    border-bottom: 2px solid #2d64e6;
 }
 
-.play_5_carousel h5 {
-    opacity: 0.7;
-}
+
+
 
 /* it take two  */
 .it_takes_two {
