--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ main {
 .play_5_card {
     opacity: 0.7;
     border-bottom: 2px solid transparent;
+    height: 100%;
 }
 
 .play_5_carousel img {
@@ -137,8 +138,6 @@ main {
     opacity: 1;
     border-bottom: 2px solid #2d64e6;
 }
-
-
 
 
 /* it take two  */
