fic colori button

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
 
 .btn_grey:hover {
     outline-offset: 2px;
-    outline: 2px solid #3066e6;
+    outline: 2px solid #d9dadc;
     color: #3066e6;
 }
 
